Curl response filtering works reusing the Go proxy code

--- a/internal/curl_hook/Makefile
+++ b/internal/curl_hook/Makefile
@@ -1,5 +1,6 @@
 CXX=g++
 CXXFLAGS=-fPIC -std=c++17
+LDFLAGS=-L../../pkg/libfilter -lfilter
 
 curl_hook.so: curl_hook.o
-	g++ -shared -fPIC $< -o $@
+	g++ -shared -fPIC $< -o $@ $(LDFLAGS)
