Static linking of libfilter into curl_hook should work

--- a/internal/curl_hook/Makefile
+++ b/internal/curl_hook/Makefile
@@ -1,6 +1,10 @@
 CXX=g++
 CXXFLAGS=-fPIC -std=c++17
-LDFLAGS=-L../../pkg/libfilter -lfilter
+FILTER_PATH=../../pkg/libfilter
+LDFLAGS=-L$(FILTER_PATH) -lfilter
 
-curl_hook.so: curl_hook.o
+curl_hook.so: curl_hook.o libfilter.a
 	g++ -shared -fPIC $< -o $@ $(LDFLAGS)
+
+libfilter.a: $(FILTER_PATH)/libfilter.go
+	(cd $(FILTER_PATH) && go build -buildmode=c-archive -o $@)
