Fixed crash on systems where curl does not implement easy_perform using multi_perform

--- a/internal/curl_hook/Makefile
+++ b/internal/curl_hook/Makefile
@@ -3,8 +3,10 @@ CXXFLAGS=-fPIC -std=c++17
 FILTER_PATH=../../pkg/libfilter
 LDFLAGS=-L$(FILTER_PATH) -lfilter
 
-curl_hook.so: curl_hook.o libfilter.a
+curl_hook.so: curl_hook.o
 	g++ -shared -fPIC $< -o $@ $(LDFLAGS)
+
+curl_hook.o: libfilter.a
 
 libfilter.a: $(FILTER_PATH)/libfilter.go
 	(cd $(FILTER_PATH) && go build -buildmode=c-archive -o $@)
