Simplified directory structure

--- a/internal/curl_hook/Makefile
+++ b/internal/curl_hook/Makefile
@@ -1,12 +1,13 @@
 CXX=g++
 CXXFLAGS=-fPIC -std=c++17
-FILTER_PATH=../../pkg/libfilter
-LDFLAGS=-L$(FILTER_PATH) -lfilter
+LDFLAGS=-L bridge -lbridge
 
 curl_hook.so: curl_hook.o
 	g++ -shared -fPIC $< -o $@ $(LDFLAGS)
 
-curl_hook.o: libfilter.a
+curl_hook.o: bridge/libbridge.h
 
-libfilter.a: $(FILTER_PATH)/libfilter.go
-	(cd $(FILTER_PATH) && go build -buildmode=c-archive -o $@)
+bridge/libbridge.h: libbridge.a
+
+libbridge.a: bridge/libbridge.go
+	(cd bridge && go build -buildmode=c-archive -o $@)
